# mysh

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
models/: README.md
mysh/: logger.py  myelin_sheath.py
mysh/metrics/: myelin_sheath_metrics.py
mysh/models/: myelin_sheath_detector.py  unet.py
mysh/models/unet_pipeline/: config.py  unet_myelin_sheath_detector.py
mysh_webserver/: README.md  backend_celery.py  main.py  utils.py
mysh_webserver/static/: style.css
mysh_webserver/templates/: base.html  result.html  upload.html
